--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1256,6 +1256,35 @@ a {
     left: -1rem;
   }
 }
+.cid-tDhaKOFWc4 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-tDhaKOFWc4 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tDhaKOFWc4 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tDhaKOFWc4 .video-wrapper iframe {
+  width: 100%;
+}
+.cid-tDhaKOFWc4 .mbr-section-title,
+.cid-tDhaKOFWc4 .mbr-description {
+  text-align: center;
+}
+@media (min-width: 992px) {
+  .cid-tDhaKOFWc4 .text-wrapper {
+    padding: 2rem;
+  }
+}
 .cid-tD2UhRFSM7 {
   background-image: url("../../../assets/images/istock-696935126-2-2000x1125.jpeg");
 }
